[package]
name = "curve25519tool"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic = "0.5.0"
argh = "0.1.3"
hex = "0.4.0"
getrandom = "0.1.14"
arrayref = "0.3.6"
