[package]
name = "curve25519tool"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic = "0.5.0"
argh = "0.1.3"
hex = "0.4.0"
getrandom = {version="0.1.14",features=["std"]}
arrayref = "0.3.6"

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
