[package]
name = "curve25519tool"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic = {version="0.5.0", optional=true}
argh = "0.1.3"
hex = "0.4.0"
getrandom = {version="0.1.14",features=["std"]}
arrayref = "0.3.6"

x25519-dalek = {version="0.6.0", optional=true}
ed25519-dalek = {version="0.9.1", features=["std"],optional=true}
rand = {version="0.6", features=["std"], optional=true}
sha2 = {version="0.8.1", optional=true}
curve25519-dalek = {version="2.0.0", optional=true}

[features]
default = ["dalek"]
dalek = ["x25519-dalek","ed25519-dalek","rand","sha2","curve25519-dalek"]
donna = ["elliptic"]

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'
